
This is a list of API changes in SDL's version history.

Version 1.0:

1.2.10:
	Added SDL_GL_SWAP_CONTROL to wait for vsync in OpenGL applications.

	Added current_w and current_h to the SDL_VideoInfo structure,
	which is set to the desktop resolution during video intialization,
	and then set to the current resolution when a video mode is set.

	SDL_SetVideoMode() now accepts 0 for width or height and will use
	the current video mode (or the desktop mode if no mode has been set.)

	Added SDL_GetKeyRepeat()

	Added SDL_config.h, with defaults for various build environments.

1.2.7:
	Added CPU feature detection functions to SDL_cpuinfo.h:
		SDL_HasRDTSC(), SDL_HasMMX(), SDL_Has3DNow(), SDL_HasSSE(),
		SDL_HasAltiVec()
	Added function to create RWops from const memory: SDL_RWFromConstMem()

1.2.6:
	Added SDL_LoadObject(), SDL_LoadFunction(), and SDL_UnloadObject()

	Added SDL_GL_MULTISAMPLEBUFFERS and SDL_GL_MULTISAMPLESAMPLES for FSAA

1.2.5:
	Added SDL_BUTTON_WHEELUP (4) and SDL_BUTTON_WHEELDOWN (5)

	Added SDL_GL_STEREO for stereoscopic OpenGL contexts

1.2.0:
	Added SDL_VIDEOEXPOSE event to signal that the screen needs to
	be redrawn.  This is currently only delivered to OpenGL windows
	on X11, though it may be delivered in the future when the video
	memory is lost under DirectX.

1.1.8:
	You can pass SDL_NOFRAME to SDL_VideoMode() to create a window
	that has no title bar or frame decoration.  Fullscreen video
	modes automatically have this flag set.

	Added a function to query the clipping rectangle for a surface:
		void SDL_GetClipRect(SDL_Surface *surface, SDL_Rect *rect)

	Added a function to query the current event filter:
		SDL_EventFilter SDL_GetEventFilter(void)

	If you pass -1 to SDL_ShowCursor(), it won't change the current
	cursor visibility state, but will still return it.

	SDL_LockSurface() and SDL_UnlockSurface() are recursive, meaning
	you can nest them as deep as you want, as long as each lock call