@@ -214,6 +214,7 @@ typedef enum {
     SDL_GL_STEREO,
     SDL_GL_MULTISAMPLEBUFFERS,
     SDL_GL_MULTISAMPLESAMPLES,
+    SDL_GL_ACCELERATED_VISUAL,
     SDL_GL_SWAP_CONTROL
 } SDL_GLattr;
 
